# LazyOps

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  ROADMAP.md  VISION.md  WORKFLOW_SPEC.md  lazyops  list-workflows.txt  pyproject.toml  requirements.txt  setup.sh
.copilot/: README.md
.github/workflows/: publish.yml
commands/: aws.py  list.py  pack.py  run.py  search.py  source.py
context/: aws-trace.md  index.md
lazyops_cli/: cli.py
plugins/aws/: pack.yaml
registry/: catalog.py  cmdb.py  config.py  discover.py  fetch.py  packs.py  paths.py  runner.py  source.py
scripts/: ensure_venv.sh  generalize_workflows.py  generate_workflows.py  update_workflow_yamls.py  with-venv
workflows/add-certificate-lb/: workflow.yaml
workflows/add-tags/: workflow.yaml
workflows/addpatchclasstag/: workflow.yaml
workflows/addpubkey/: workflow.yaml
workflows/aerospike-oom-recovery/: workflow.yaml
workflows/asg-git-urls/: workflow.yaml
workflows/asg-ips/: workflow.yaml
workflows/asg-ips-ssh/: workflow.yaml
workflows/backup-ami/: workflow.yaml
workflows/batch-start-linux-ami-patch-automation/: script.sh  workflow.yaml
workflows/bifercate-asg-static/: workflow.yaml
workflows/bitbucket-repo-users/: workflow.yaml
workflows/bitbucket-repos/: workflow.yaml
workflows/change-bash-login/: workflow.yaml
workflows/change-password-expiry/: workflow.yaml
workflows/change-user-shell/: workflow.yaml
workflows/change-userdata/: workflow.yaml
workflows/changepassword/: workflow.yaml
workflows/check-ami/: workflow.yaml
(+80 files in other folders)
