[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lazyops-cli"
version = "1.1.1"
description = "CLI to discover, fetch, and run reusable automation workflows from remote plugin packs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Mridul Tiwari" }]
keywords = ["cli", "automation", "workflows", "devops", "ops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.12.0",
    "PyYAML>=6.0",
    "requests>=2.28.0",
    "boto3>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/MridulTi/LazyOps"
Repository = "https://github.com/MridulTi/LazyOps"
Issues = "https://github.com/MridulTi/LazyOps/issues"
Documentation = "https://github.com/MridulTi/LazyOps#readme"

[project.scripts]
lazyops = "lazyops_cli.cli:run"

[tool.setuptools]
packages = ["lazyops_cli", "commands", "registry"]
